go/examples/knative-eventing-source/deploy/subscription.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: rgwpubsub-svc
  namespace: rgwpubsub
spec:
  runLatest:
    configuration:
      revisionTemplate:
        spec:
          container:
            image: docker.io/rootfs/rgwpubsub-knative-receiver
