go/examples/knative-eventing-source/deploy/http-to-knative-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-to-knative
  namespace: rgwpubsub
spec:
  ports:
  - port: <internal listening port>
    name: http
  selector:
      # the container source name label used as service selector
      eventing.knative.dev/source: http-to-knative-rgwpubsub
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-to-knative-gateway
  namespace: rgwpubsub
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-to-knative
  namespace: rgwpubsub
spec:
  hosts:
  - "*"
  gateways:
  - http-to-knative-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: http-to-knative # name of the service
        port:
          number: <internal listening port>
