go/examples/knative-eventing-source/deploy/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: rgwpubsub-source
  namespace: rgwpubsub
spec:
  hosts:
      - "<rgw pubsub hostname>"
  ports:
  - number: 8001 #rgw pubsub port
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
